# ebcc

./: 404.html  CITATION.cff  FEATURES.md  LICENSE.md  README  README.md  gen_files.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  search.html  setup.py  sitemap.xml
.github/workflows/: bootstrap.yaml  bootstrap_all.sh  ci.yaml  codegen.yaml  publish.yaml
docs/: features.md  gen_files.py  mkdocs.yaml
ebcc/: __init__.py  ansatz.py  base.py  brueckner.py  ccsd.py  ccsd_1_1.py  ccsd_1_1_equations.py  ccsd_2_1_equations.py  ccsd_2_2_equations.py  ccsd_equations.py  cderis.py  damping.py  dump.py  ebccsd.py  eom.py  eris.py  fock.py  gebcc.py  geom.py  logging.py  precision.py  rebcc.py  reom.py  space.py  uebcc.py  ueom.py  util.py  utils.py
ebcc/backend/: __init__.py  _ctf.py  _cupy.py  _jax.py  _numpy.py  _tensorflow.py
ebcc/cc/: __init__.py  base.py  gebcc.py  rebcc.py  uebcc.py
ebcc/codegen/: GCC2.py  GCC3.py  GCCD.py  GCCSD.py  GCCSDT.py  GCCSDTQ.py  GCCSD_SD_1_1.py  GCCSD_SD_1_2.py  GCCSD_SD_S.py  GCCSD_SD_SD.py  GCCSD_S_1_1.py  GCCSD_S_S.py  GCCSD_T.py  GCCSDt.py  GCCSDtp.py  GCCSDwtwp.py  GCCSDxTx.py  GDCD.py  GDCSD.py  GLCCD.py  GLCCSD.py  GMP2.py  GMP3.py  GQCISD.py  GecCC.py  GwdwwrwCCD.py  GwrwCCD.py  RCC2.py  RCC3.py  RCCD.py  RCCSD.py  RCCSDT.py  RCCSD_SD_1_1.py  RCCSD_SD_1_2.py  RCCSD_SD_S.py  RCCSD_SD_SD.py  RCCSD_S_1_1.py  RCCSD_S_S.py  RCCSD_T.py  RCCSDt.py  (+127 more)
ebcc/core/: __init__.py  ansatz.py  array.py  damping.py  davidson.py  dump.py  logging.py  precision.py  tensor.py
ebcc/eom/: __init__.py  base.py  geom.py  reom.py  ueom.py
ebcc/ext/: __init__.py  eccc.py  fci.py  tcc.py
ebcc/ham/: __init__.py  base.py  cderis.py  elbos.py  eris.py  fock.py  space.py
ebcc/opt/: __init__.py  base.py  gbrueckner.py  gopt.py  rbrueckner.py  ropt.py  ubrueckner.py  uopt.py
ebcc/util/: __init__.py  einsumfunc.py  inheritance.py  misc.py  permutations.py
examples/: 00-ccsd.py  00-simple_ccsd.py  01-ebccsd.py  01-simple_ebcc.py  02-autogen_code.py  02-eom_uccsd.py  03-cc2.py  03-hubbard_holstein.py  04-ccsdt_active_space.py  04-rdms.py  04-uhf_hub_hol.py  05-bccd.py  05-uhf_abinitio.py  06-restart.py  06-uhf_abinitio_bosnonconserve.py  07-rdms.py  08-mp2.py  08-rdms-ccsd.py  09-energy_from_rdms.py  09-spin_conversion.py  10-frozen_core.py  10-projected_rdms.py  11-density_fitting.py  11-single_precision.py  12-rdms-ebcc.py  13-fno_ccsd.py  13-rdms_energy-ebcc.py  14-projected_rdms-ebcc.py  15-hubbard.py  16-external_correction.py  17-occsd.py  18-sp_moms-ccsd.py  19-sp_moms-ebccsd.py  22-dd_moms-ccsd.py  23-dd_moms-ebccsd.py
features/: index.html
gen_eqns/: NOTES  add_suffix.py  ccsd_11_amps.out  ccsd_11_amps.py  ccsd_11_bosrdms.out  ccsd_11_bosrdms.py  ccsd_11_lag.py  ccsd_11_lag_nosimp.out  ccsd_11_lag_simp.out  ccsd_11_lam.out  ccsd_11_lam.py  ccsd_11_lam_opt.out  ccsd_11_rdms.out  ccsd_11_rdms.py  ccsd_21_amps.out  ccsd_21_amps.py  ccsd_22_amps.out  ccsd_22_amps.py  ccsd_amps.py  ccsd_lam.py  ccsd_rdms.out  ccsd_rdms.py  convenience_extra.py
gen_eqns/moments/: ccsd_11_moms_ea.out  ccsd_11_moms_ip.out  ccsd_11_moms_ip.py  ccsd_moms_ea.out  ccsd_moms_ea.py  ccsd_moms_gen.py  ccsd_moms_ip.out  ccsd_moms_ip.py  eom_moms.py
reference/: index.html
reference/ansatz/: index.html
reference/backend/: index.html
reference/backend/_ctf/: index.html
reference/backend/_cupy/: index.html
reference/backend/_jax/: index.html
reference/backend/_numpy/: index.html
reference/backend/_tensorflow/: index.html
reference/brueckner/: index.html
reference/cc/: index.html
reference/cc/base/: index.html
reference/cc/gebcc/: index.html
reference/cc/rebcc/: index.html
reference/cc/uebcc/: index.html
reference/codegen/: index.html
reference/codegen/GCC2/: index.html
reference/codegen/GCC3/: index.html
reference/codegen/GCCD/: index.html
reference/codegen/GCCSD/: index.html
reference/codegen/GCCSDT/: index.html
reference/codegen/GCCSDTQ/: index.html
reference/codegen/GCCSD_SD_1_1/: index.html
reference/codegen/GCCSD_SD_1_2/: index.html
reference/codegen/GCCSD_S_1_1/: index.html
reference/codegen/GCCSDwtwp/: index.html
reference/codegen/GCCSDxTx/: index.html
reference/codegen/GMP2/: index.html
reference/codegen/GMP3/: index.html
reference/codegen/GQCISD/: index.html
reference/codegen/RCC2/: index.html
reference/codegen/RCC3/: index.html
reference/codegen/RCCD/: index.html
reference/codegen/RCCSD/: index.html
reference/codegen/RCCSDT/: index.html
reference/codegen/RCCSD_SD_1_1/: index.html
reference/codegen/RCCSD_SD_1_2/: index.html
reference/codegen/RCCSD_S_1_1/: index.html
reference/core/: index.html
reference/eom/: index.html
reference/ext/: index.html
reference/gebcc/: index.html
reference/geom/: index.html
reference/ham/: index.html
reference/opt/: index.html
reference/rebcc/: index.html
reference/reom/: index.html
reference/space/: index.html
reference/uebcc/: index.html
reference/ueom/: index.html
reference/util/: index.html
scripts/bosonic_shift/: ebccsd.py
scripts/compare_epcc/: ccsd.py  driver_utils.py  ebccsd_randomham.py  hh_ccsd_22.py
scripts/pyscf_eb_fci/: eb_solve.py  hh_8site_fci.py
search/: search_index.json
tests/: test_GCC2.py  test_GCC3.py  test_GCCD.py  test_GCCSD.py  test_GCCSDT.py  test_GCCSDTQ.py  test_GCCSD_SD_1_1.py  test_GCCSD_SD_1_2.py  test_GCCSD_SD_S.py  test_GCCSD_SD_SD.py  test_GCCSD_S_1_1.py  test_GCCSD_S_S.py  test_GCCSD_T.py  test_GCCSDt.py  test_GCCSDtp.py  test_GCCSDwtwp.py  test_GCCSDxTx.py  test_GLCCD.py  test_GLCCSD.py  test_GMP2.py  test_GMP3.py  test_GQCISD.py  test_RCC2.py  test_RCC3.py  test_RCCD.py  test_RCCSD.py  test_RCCSDT.py  test_RCCSD_SD_1_1.py  test_RCCSD_SD_1_2.py  test_RCCSD_SD_S.py  test_RCCSD_SD_SD.py  test_RCCSD_S_1_1.py  test_RCCSD_S_S.py  test_RCCSD_T.py  test_RCCSDt.py  test_RCCSDtp.py  test_RCCSDwtwp.py  test_RCCSDxTx.py  test_RDCD.py  test_RDCSD.py  (+48 more)
tutorials/: 01-Introduction.ipynb  02-Spaces.ipynb  03-Spin.ipynb  04-Precision.ipynb  05-Backend.ipynb  06-Bosons.ipynb  07-Advanced.ipynb
(+60 files in other folders)
