[project]
name = "ebcc"
version = "1.3.0"
description = "Coupled cluster calculations on electron-boson systems"
keywords = [
    "quantum", "chemistry",
    "electronic", "structure",
    "coupled", "cluster",
    "electron", "boson",
    "ccsd",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy<=1.10.0",
    "pyscf>=2.0.0",
    "h5py>=3.0.0",
]

[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "flake8>=3.8.4",
    "flake8-pyproject>=1.2.3",
    "coverage[toml]>=5.5.0",
    "pytest>=6.2.4",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 100
target-version = [
    "py37",
    "py38",
]
include = "ebcc"
exclude = """
/(
    | ebcc/codegen
    | ebcc/__pycache__
    | .git
)/
"""

[tool.isort]
atomic = true
profile = "black"
line_length = 100
src_paths = [
    "ebcc",
]
skip_glob = [
    "ebcc/__pycache__/*",
    "ebcc/codegen/*",
    "ebcc/__init__.py",
]

[tool.pydocstringformatter]
max-line-length = 72
write = true
exclude = [
    "ebcc/codegen",
    "ebcc/__pycache__",
    ".git",
]
style = "numpydoc"

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
count = true
include = "ebcc"
exclude = """
/(
    | ebcc/codegen
    | ebcc/__pycache__
    | .git
)/
"""

[tool.coverage.run]
branch = true
source = [
    "ebcc",
]
omit = [
    "ebcc/codegen/gen_*.py",
    "ebcc/codegen/wick.py",
    "ebcc/codegen/common.py",
    "ebcc/codegen/convenience_extra.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "raise util.ModelNotImplemented",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
testpaths = [
    "tests",
]
markers = [
    # Slow tests:
    "slow",
    # Tests compared to another code:
    "reference",
    # Tests compared to another `ebcc` version:
    "regression",
]
