[project]
name = "ebcc"
version = "1.4.2"
description = "Coupled cluster calculations on electron-boson systems"
keywords = [
    "quantum", "chemistry",
    "electronic", "structure",
    "coupled", "cluster",
    "electron", "boson",
    "ccsd",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy<=1.10.0",
    "pyscf>=2.0.0",
    "h5py>=3.0.0",
]

[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "flake8>=3.8.4",
    "flake8-pyproject>=1.2.3",
    "flake8-bugbear>=23.0.0",
    "flake8-docstrings>=1.6.0",
    "coverage[toml]>=5.5.0",
    "pytest>=6.2.4",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 100
target-version = [
    "py37",
    "py38",
]
include = "ebcc"
exclude = """
/(
    | ebcc/codegen
    | ebcc/__pycache__
    | .git
)/
"""

[tool.isort]
atomic = true
profile = "black"
line_length = 100
src_paths = [
    "ebcc",
]
skip_glob = [
    "ebcc/__pycache__/*",
    "ebcc/codegen/*",
    "ebcc/__init__.py",
]

[tool.flake8]
max-line-length = 100
max-doc-length = 75
ignore = [
    "E203",  # Whitespace before ':'
    "E731",  # Do not assign a lambda expression, use a def
    "E741",  # Ambiguous variable name
    "W503",  # Line break before binary operator
    "D202",  # No blank lines allowed after function docstring
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period
    "B007",  # Loop control variable not used within the loop body
]
per-file-ignores = [
    "__init__.py:E402,W605,F401,F811,D103",
]
docstring-convention = "numpy"
ignore-decorators = "has_docstring"
count = true
include = "ebcc"
exclude = """
/(
    | ebcc/codegen
    | ebcc/__pycache__
    | .git
)/
"""

[tool.coverage.run]
branch = true
source = [
    "ebcc",
]
omit = [
    "ebcc/codegen/gen_*.py",
    "ebcc/codegen/wick.py",
    "ebcc/codegen/common.py",
    "ebcc/codegen/convenience_extra.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "raise util.ModelNotImplemented",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
testpaths = [
    "tests",
]
markers = [
    # Slow tests:
    "slow",
    # Tests compared to another code:
    "reference",
    # Tests compared to another `ebcc` version:
    "regression",
]
